TimePicker and DatePicker styling

--- a/wp7-donor/Donor/AchievesPage.xaml
+++ b/wp7-donor/Donor/AchievesPage.xaml
@@ -73,6 +73,7 @@
                     </ListBox>
                     <Button Name="ItsbetaAppButton" 
                             FontSize="24"
+                            Style="{StaticResource ButtonMargin}"
 					        Background="#FF4186A3" 
 					        BorderBrush="#FF4186A3" 
 					        Foreground="#FFFFFFFF"
